2023-05-18_okd_digiteq/day1/okd/route-http.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-http
spec:
  host: example-http.apps.okd0.aws0.sikademo.com
  to:
    kind: Service
    name: clusterip
  port:
    targetPort: 8000
