2023-05-18_okd_digiteq/day1/okd/route-https.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-https
spec:
  host: example-https.apps.okd0.aws0.sikademo.com
  to:
    kind: Service
    name: clusterip
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIEjzCCA3egAwIBAgISBJ7S/ff+Ve+rTr97R3+xOhDPMA0GCSqGSIb3DQEBCwUA
[...]
      ZUdi9IpCWGSm77vriu5+Pec8vQ==
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    key: |
      -----BEGIN EC PRIVATE KEY-----
      MHcCAQEEIERHdc9cYWz3GCqRMvngu5rPQ8TmGUGgiY0M/bhhjKlOoAoGCCqGSM49
[...]
      7D3wLGAsRfIJXtOUDHtdx43QYn7jK+EXKw==
      -----END EC PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
